cmake_minimum_required(VERSION 3.8)
project(HW3 VERSION 1.1.0 LANGUAGES CXX)

set(COMMON_SOURCES
    ../Common/AppBase.cpp
    ../Common/AppBase.h
    ../Common/Model.cpp
    ../Common/Model.h)
set(SOURCES main.cpp SampleTriangle.h SampleTriangle.cpp)

source_group("Common" FILES ${COMMON_SOURCES})
source_group("" FILES ${SOURCES})

set(OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Bin/x86_64")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${OUTPUT_DIRECTORY}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${OUTPUT_DIRECTORY}")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${OUTPUT_DIRECTORY}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${OUTPUT_DIRECTORY}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG "${OUTPUT_DIRECTORY}")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${OUTPUT_DIRECTORY}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${OUTPUT_DIRECTORY}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE "${OUTPUT_DIRECTORY}")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${OUTPUT_DIRECTORY}")

add_executable(HW3 ${COMMON_SOURCES} ${SOURCES})

target_link_libraries(HW3
    PRIVATE assimp
    PRIVATE glfw
    PRIVATE Vulkan::Vulkan
    PRIVATE VEZ
)

target_compile_features(HW3 PRIVATE cxx_std_14)

target_compile_definitions(HW3 PUBLIC _CRT_SECURE_NO_WARNINGS STB_IMAGE_IMPLEMENTATION)

set_target_properties(HW3 PROPERTIES FOLDER HW)

set_target_properties(HW3 PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${OUTPUT_DIRECTORY}")

file(COPY ${VEZ_OUTPUT_DIRECTORY} DESTINATION "${OUTPUT_DIRECTORY}/..")
file(COPY "SampleTriangle.frag" "SampleTriangle.vert" DESTINATION "${OUTPUT_DIRECTORY}/Shaders")
file(COPY "apple.obj" DESTINATION "${OUTPUT_DIRECTORY}/Models")
file(COPY "texture.jpg" DESTINATION "${OUTPUT_DIRECTORY}/Textures")
file(COPY "../../Lib/assimp-vc140-mt.dll" DESTINATION "${OUTPUT_DIRECTORY}")